--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard index.js test/index.js",
-    "test": "node test/index.js && npm run lint",
+    "test": "jest",
     "typecheck": "tsc"
   },
   "repository": {
@@ -22,8 +22,22 @@
     "url": "https://github.com/jarofghosts/dotpather/issues"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.4",
     "standard": "^5.4.1",
     "tape": "^4.4.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
 }
